--- a/index.html
+++ b/index.html
@@ -127,11 +127,10 @@
                             <div class="col-lg-12 d-flex align-items-center">
                                 <a href="#" class="btn btn-warning me-4 px-3">Download CV</a>
                                 <div class="social-link">
-                                    <a href="#" class="me-2"><i class="fa-brands fa-facebook"></i></a>
+                                    <a href="https://www.facebook.com/zwel.k.aung.5?mibextid=zLoPMf" class="me-2"><i class="fa-brands fa-facebook"></i></a>
                                     <a href="#" class="me-2"><i class="fa-brands fa-twitter"></i></a>
-                                    <a href="#" class="me-2"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/okkzkkang/" class="me-2"><i class="fa-brands fa-instagram"></i></a>
                                     <a href="#" class="me-2"><i class="fa-brands fa-whatsapp"></i></a>
-                                    <a href="#" class="me-2"><i class="fa-brands fa-telegram"></i></a>
                                     <a href="#" class="me-2"><i class="fa-brands fa-linkedin"></i></a>
                                 </div>
                             </div>
